# helixos

./: .gitignore  CLAUDE.md  CLAUDE.md.local  LESSONS.md  PROGRESS.md  QUICKSTART.md  README.md  TASKS.md  TASKS.md.bak  claude-code-workflow-guide.md  helixos_prd_v0.3.md  orchestrator_config.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: input-reviewer.md  refactor-advisor.md  reviewer.md  (+1 more)
archive/: completed_tasks.md  progress_log.md
config/: reviewer_personas.yaml
docs/: e2e_verification.md
frontend/: package-lock.json  package.json  playwright.config.ts
scripts/: QUICKSTART.md  autonomous_run.sh  check.sh  check_emoji.py  commit-msg  install-hooks.sh  orchestrator.py  pre-commit  repair_plan_state.py  run_server.py  start.ps1
src/: api.py  api_helpers.py  config.py  config_writer.py  db.py  dependency_graph.py  enrichment.py  env_loader.py  events.py  git_ops.py  history_writer.py  models.py  platform_utils.py  port_registry.py  process_manager.py  process_monitor.py  project_settings.py  project_validator.py  prompt_loader.py  review_pipeline.py  scheduler.py  schemas.py  sdk_adapter.py  session_context_loader.py  settings_sync.py  subprocess_registry.py  task_generator.py  task_manager.py  tasks_writer.py
tests/: conftest.py  factories.py  test_api.py  test_archive_check.py  test_bidirectional_transitions.py  test_browse.py  test_code_executor.py  test_complexity_passthrough.py  test_config.py  test_conversation_extraction.py  test_db.py  test_deleted_source.py  test_drag_to_review.py  test_enrichment.py  test_env_loader.py  test_events.py  test_git_ops.py  test_history_writer.py  test_is_primary.py  test_models.py  test_plan_generation.py  test_plan_models.py  test_plan_review.py  test_plan_state_machine.py  test_plan_status_sync.py  test_plan_validity.py  test_port_registry.py  test_process_manager.py  test_process_monitor.py  test_project_onboarding.py  test_project_settings.py  test_prompt_eval.py  test_prompt_loader.py  test_race_conditions.py  test_replan_and_plan_enrichment.py  test_replan_review_attempt.py  test_review_gate.py  test_review_gate_bypass.py  test_review_gate_ux.py  test_review_lifecycle_state.py  (+26 more)
(+128 files in other folders)
